--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,11 @@
-set-option -g prefix C-a
 unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
 
+unbind -
+bind-key _ delete-buffer
+
+unbind '"'
+unbind %
 bind-key \ split-window -h
 bind-key - split-window
