--- a/tmux.conf
+++ b/tmux.conf
@@ -9,3 +9,35 @@ unbind '"'
 unbind %
 bind-key \ split-window -h
 bind-key - split-window
+
+bind-key k kill-pane
+
+# Colors
+color_orange="colour166"
+color_purple="colour134"
+color_green="colour076"
+color_blue="colour39"
+color_yellow="colour220"
+color_red="colour160"
+color_black="black"
+color_white="white"
+
+color_dark="$color_black"
+color_light="$color_white"
+color_session_text="$color_blue"
+color_status_text="colour250"
+color_main="$color_orange"
+color_secondary="$color_purple"
+
+set -g mode-style "fg=default,bg=$color_main"
+
+# command line style
+set -g message-style "fg=$color_main,bg=$color_dark"
+
+# status line style
+set -g status-style "fg=$color_status_text,bg=$color_dark"
+setw -g window-status-format " #I:#W "
+setw -g window-status-current-style "fg=$color_light,bold,bg=$color_main"
+
+# outline for active pane
+setw -g pane-active-border-style "fg=$color_main"
