--- a/tmux.conf
+++ b/tmux.conf
@@ -36,8 +36,9 @@ set -g message-style "fg=$color_main,bg=$color_dark"
 
 # status line style
 set -g status-style "fg=$color_status_text,bg=$color_dark"
-setw -g window-status-format " #I:#W "
-setw -g window-status-current-style "fg=$color_light,bold,bg=$color_main"
+setw -g window-status-format "  #I:#W  "
+setw -g window-status-current-style "fg=$color_light,bg=$color_dark"
+setw -g window-status-current-format "#[fg=$color_main,bg=$color_dark]▶ #[default]#I:#W#F "
 
 # outline for active pane
 setw -g pane-active-border-style "fg=$color_main"
