tmux zoom window status

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,5 @@
+setw -g mode-keys emacs
+
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
@@ -7,8 +9,9 @@ bind-key _ delete-buffer
 
 unbind '"'
 unbind %
-bind-key \ split-window -h
-bind-key - split-window
+bind-key \ split-window -h -c "#{pane_current_path}"
+bind-key - split-window -c "#{pane_current_path}"
+bind-key c new-window -c "#{pane_current_path}"
 
 bind-key k kill-pane
 
@@ -36,9 +39,9 @@ set -g message-style "fg=$color_main,bg=$color_dark"
 
 # status line style
 set -g status-style "fg=$color_status_text,bg=$color_dark"
-setw -g window-status-format "  #I:#W  "
+setw -g window-status-format "  #I:#W "
 setw -g window-status-current-style "fg=$color_light,bg=$color_dark"
-setw -g window-status-current-format "#[fg=$color_main,bg=$color_dark]▶ #[default]#I:#W#F "
+setw -g window-status-current-format "#[fg=$color_main,bg=$color_dark]#{?window_zoomed_flag,◼,▶} #[default]#I:#W "
 
 # outline for active pane
 setw -g pane-active-border-style "fg=$color_main"
